# cps_notebook

./: LICENSE  README.md  _quarto.yml
cps_notebook/: .hgignore  LICENSE  Makefile  README.md  TODO.md  dotenv  pyproject.toml
cps_notebook/demo/: query1.html  query1.sparql  query2.html  query2.sparql  query3.sparql  query4.sparql  query5.sparql  query6.wb
cps_notebook/src/cps_notebook/: __init__.py  _version.py  query1.ipynb  sparql.py  wb.py
docs/: index.html  intro.html  references.html  search.json  summary.html
docs/cps_notebook/src/cps_notebook/: query1.html
